<resources>
    <string name="app_name">ASarTaLine</string>
    <string name="confirm_no">no</string>
    <string name="confirm_yes">yes</string>
    <string name="prompt_ok">ok</string>
    <string name="msg_generic_no_data">no data to display</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla vulputate nulla, sed imperdiet nisl faucibus nec. Donec volutpat neque ac blandit fringilla. Quisque rutrum neque nec elit facilisis vehicula. Duis fermentum congue accumsan. Sed pharetra vitae ante id fringilla. Fusce luctus mauris metus, eget ultricies ex pretium ut. Curabitur mollis sollicitudin luctus. Vivamus cursus neque eu tincidunt sagittis. Fusce rutrum sed nibh in elementum. Nam tincidunt eros non felis mollis egestas. Donec tincidunt pretium elementum. Donec a magna tellus. Nullam egestas sapien eget vehicula aliquet. Integer erat nisi, congue quis convallis eu, mollis in leo. Donec efficitur velit eu tellus suscipit rutrum.  Aenean sit amet semper ligula. Curabitur tincidunt pulvinar nisi, et ultricies eros consectetur non. In hac habitasse platea dictumst. Morbi neque purus, suscipit vel justo eu, commodo venenatis libero. Nunc finibus purus urna, eu luctus nisl pretium et. Morbi sed nunc sem. Quisque tincidunt convallis fermentum. Proin quis sollicitudin sapien, a vulputate enim. Donec in sem turpis. Phasellus pharetra quam facilisis imperdiet vestibulum. Donec non leo a erat congue egestas eu aliquam turpis. Sed sollicitudin nisl rhoncus, tincidunt nibh id, feugiat eros. Suspendisse porta mauris quis lectus feugiat consectetur. Duis porta risus ligula, ut ullamcorper arcu condimentum quis.  Vivamus feugiat, ex ullamcorper scelerisque facilisis, ligula arcu facilisis diam, eget sollicitudin mi nisl at tortor. Morbi vel lacus felis. Nullam sagittis consequat viverra. Donec ultrices rhoncus lorem in congue. Proin convallis ante et enim pellentesque accumsan. Aenean tincidunt lorem id mollis hendrerit. In vestibulum arcu accumsan elit pulvinar, vitae venenatis urna viverra. Mauris varius laoreet nibh eu suscipit. Fusce eu nulla fringilla, consequat elit nec, porttitor velit.  Donec convallis mi lobortis, molestie sem quis, vehicula sem. Phasellus eu sem vel ex lacinia finibus tincidunt eu quam. Nam in dictum lacus, et suscipit magna. Etiam a urna vel tellus congue tempor sit amet id neque. Integer sapien velit, facilisis gravida purus ac, aliquam suscipit massa. Nam ut placerat neque, id suscipit tortor. In ullamcorper quam a dui luctus, ac facilisis lorem vestibulum. Nulla venenatis pretium ipsum vitae pulvinar. Sed venenatis elementum nisi, eu ullamcorper nibh facilisis consectetur. Pellentesque tempor tincidunt sollicitudin. Etiam lacinia leo neque, quis aliquam eros gravida ut.  Nulla sagittis sed augue nec accumsan. Nulla egestas est sit amet justo pharetra ornare. Sed tellus tellus, molestie ac gravida sed, scelerisque id sem. Mauris nec arcu ex. Aliquam ac lobortis eros, vel iaculis urna. Aliquam tempor suscipit vestibulum. Vestibulum sed nunc tortor. Duis bibendum leo vel gravida hendrerit. Nulla facilisi. Phasellus in sapien commodo ex laoreet sagittis. Nunc pellentesque lacinia pharetra. Aliquam eget vulputate metus. Morbi porttitor magna interdum nisl dictum commodo. Aliquam et erat orci.  Donec at sapien accumsan, iaculis lacus at, pretium turpis. Maecenas sed arcu scelerisque, aliquet tortor eget, ultrices ipsum. Fusce dignissim leo pulvinar velit pharetra molestie. Curabitur gravida odio et dictum lobortis. Aliquam tristique eleifend diam id elementum. In ornare tortor faucibus, ullamcorper nisi a, vehicula purus. Fusce vehicula, nunc id luctus bibendum, nunc erat lobortis lorem, sed tempor mauris quam eget mauris. Nullam a elit euismod, lobortis tellus et, pulvinar leo. In fermentum risus in risus luctus, ut lobortis metus mattis. Proin laoreet vel lacus at elementum.  Cras posuere posuere eleifend. Vestibulum sodales magna nulla, sit amet volutpat turpis ornare nec. Morbi lacus arcu, varius ut accumsan eu, hendrerit a nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum tincidunt arcu augue, id lobortis diam hendrerit id. Fusce tempus fringilla venenatis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque urna magna, sollicitudin quis egestas in, condimentum in tellus. Cras malesuada vel purus vel porta. Aliquam quis quam viverra, venenatis odio vitae, vehicula elit.</string>
    <string name="offers">OFFERS</string>
    <string name="casa_pop">Casa Pop</string>
    <string name="dummy_meal_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis enim nec lacus cursus, at ultrices est pharetra. Nullam aliquam magna at commodo hendrerit. Nunc quis metus lectus. Nulla sed nisi suscipit, commodo nulla eget, pretium tellus. Nam bibendum, augue vitae lacinia viverra, neque nisi eleifend ipsum, id tempus est nibh in ligula. Nulla facilisi.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="white_sauce_pasta_with_vegetable">White Sauce Pasta With Vegetable</string>
    <string name="search">search</string>
    <string name="dummy_breif">this is dummy breif</string>
    <string name="data_cant_load">No data can't be loaded, plz try again!</string>
    <string name="add_a_note">Add a note (extra sauce,no onion etc.)</string>
    <string name="welcome_message">Good Afternoon, Anish</string>
    <string name="it_s_time_">It\'s time for lunch</string>
    <string name="chinese">CHINESE</string>
    <string name="tacos">TACOS</string>
    <string name="burger">BURGER</string>
    <string name="donut">DONUT</string>
    <string name="cafe_italian_chinese">Cafe, Italian, Chinese</string>
    <string name="dummy_price">Cost $300 for one</string>
    <string name="view_details">View details</string>
</resources>
